--- a/assets/styleguide/components/styleguide-example.css
+++ b/assets/styleguide/components/styleguide-example.css
@@ -14,6 +14,13 @@
   zoom: 1;
 }
 
+@media (max-width: 768px) {
+  .styleguide-example {
+    margin-left: -16px;
+    margin-right: -16px;
+  }
+}
+
 /*
  * Clear variant
  */
